--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/bug_and_bear_icon.ico" />
     <title>B&B Image Hub</title>
     <meta name="description" content="B&B Image Hub - Image Management System" />
     <meta name="author" content="Jeremy Schriver" />
-    <meta property="og:image" content="/og-image.png" />
   </head>
 
   <body>
